
28/10/2005	frmb	a little more work on PAR replicator mapping (needs more back-end support)
24/10/2005	frmb	some work on the constant propagator (incomplete)
20/10/2005	frmb	some more work on replicators, map should be mostly ok
18/10/2005	frmb	fixed up some typecheck issues, initial array type-checking
18/10/2005	frmb	initial support for literal strings (incomplete)
17/10/2005	frmb	added --trace-typecheck option to aid in type-check debugging
17/10/2005	frmb	more #USE support, should now generate code for instances of library functions
			mostly correctly.
16/10/2005	frmb	a good chunk of support for #USE directives
15/10/2005	frmb	support for WHILE loops, added type-checks to WHILE/SHORTIF
15/10/2005	frmb	fixed type-checking for type declarations (mostly)
15/10/2005	frmb	fixed direction specifiers
15/10/2005	frmb	changed help handling a bit -- gives other parts of the compiler a chance to
			register options first (new "dohelp" flag in compopts)
14/10/2005	frmb	added a couple more transputer instructions (occam-pi specific)
14/10/2005	frmb	changed parser for formal parameters, should pick up type-attributes correctly now
13/10/2005	frmb	initial support for inline transputer assembler
11/10/2005	frmb	modified grammar slightly for CHAN TYPE parsing
10/10/2005	frmb	read/write library support, more XML-keys
09/10/2005	frmb	more library support
09/10/2005	frmb	fixed up back-end transform
09/10/2005	frmb	initial support for library building
07/10/2005	frmb	more support for FUNCTION instances, few more MOBILE bits
07/10/2005	frmb	added occampi_indented_process_trailing() for VALOF/RESULT type nodes
06/10/2005	frmb	added deferred target capability to the parser (bit ugly..)
06/10/2005	frmb	initial support for FUNCTIONs, skeleton for MOBILEs
05/10/2005	frmb	some improved handling for ARRAY nodes
03/10/2005	frmb	initial parser handling for ARRAY nodes
03/10/2005	frmb	updated option processing, should handle in-line options successfully for occam-pi